--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,8 +21,8 @@ en:
       name: "Name"
       email: "Email"
       create: "Create my account"
-      welcome: "Welcome to the Sample App!"
-      danger: "Fail to Create!"
+      welcome: "Welcome to Sample App!"
+      danger: "Failed! Please try again"
       notfound: "User not found!"
 
     error:
