--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,2 +1,57 @@
 en:
   hello: "Hello world"
+
+  login:
+    title: "Log in"
+    newuser: "New user? "
+    fail: "Invalid email/password combination"
+    logout: "Log out"
+    account: "Account"
+    password: "Password"
+    email: "Email"
+
+  profile: "Profile"
+  settings: "Settings"
+  user:
+    user: "User"
+    title: "Sign up"
+    new:
+      confirmation: "Password Confirmation"
+      password: "Password"
+      name: "Name"
+      email: "Email"
+      create: "Create my account"
+      welcome: "Welcome to the Sample App!"
+      danger: "Fail to Create!"
+      notfound: "User not found!"
+
+    error:
+      errors: "error"
+      message: "This form contains"
+
+  signup: "Sign up now!"
+  site_name: "Ruby on Rails Tutorial Sample App"
+
+  global:
+    home: "Home"
+    help: "Help"
+    about: "About"
+
+  static_pages:
+    home:
+      title: "Home"
+    help:
+      title: "Help"
+    about:
+      title: "About"
+
+  home:
+    message: "Ruby on Rails"
+    page: "This is the home page for the "
+    sample: " sample application."
+
+  help:
+    message: "Ruby on Rails Help page"
+    book: "book"
+    page: "Get help on the Ruby on Rails Tutorial at the "
+    sample: "To get help on this sample app, see the "
