--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,12 @@ en:
   user:
     user: "User"
     title: "Sign up"
+    update: "Update Successful"
+    update_fail: "WARNING! Update failed"
+    delete: "user successfully deleted"
+    delete_fail: "WARNING! failed to delete. Please try again"
+    confirm: "Are you sure?"
+    delete_user: "Delete"
     new:
       confirmation: "Password Confirmation"
       password: "Password"
@@ -23,11 +29,12 @@ en:
       create: "Create my account"
       welcome: "Welcome to Sample App!"
       danger: "Failed! Please try again"
-      notfound: "User not found!"
+      absent: "User not found!"
 
     error:
       errors: "error"
       message: "This form contains"
+      login: "ERROR! please log in"
 
   signup: "Sign up now!"
   site_name: "Ruby on Rails Tutorial Sample App"
